# quantum_hub

./: .gitignore  BlochSphere_U.ipynb  LS_A_simple_preschool.ipynb  QH_LAB_QC_single.ipynb  README.md  alpf.py  basic_circuit.py  config.example  demo.sh  homework.py  install.sh  main.py  prove.ipynb  pyproject.toml  readme  requirements.txt  test.sh
.ipynb_checkpoints/: BlochSphere_U-checkpoint.ipynb  QH_LAB_QC_single-checkpoint.ipynb
Topics/: BlochSphere_U-checkpoint.ipynb  Mediciones_U.ipynb  PuertasCuanticas_U.ipynb  QH_LAB_QC_single-checkpoint.ipynb
first_week/: assigment.md  homework.py
fourth_week/: assigment.md
remove/: main copy.py  main.ipynb  main.py
scripts/: download-playlist.sh  music-control.sh  start-music.sh
second_week/: assigment.md  main.py  prove.ipynb
third_week/: Entrelazamiento_U.ipynb  assingment.md  main.ipynb  main.py
