[project]
name = "quantum-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "qiskit>=2.3.1",
    "qiskit-aer>=0.17.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
